--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"karma-junit-reporter": "1.2.0",
 	"typescript": "3.7.2",
 	"webpack": "4.41.5",
+	"webpack-cli": "^3.3.10",
 	"gulp": "4.0.2",
 	"webpack-stream": "5.2.1",
 	"gulp-rimraf": "1.0.0"
@@ -20,9 +21,5 @@
   "scripts": {
 	"runInstall": "npm install",
 	"buildSite": "gulp"
-  },
-  "dependencies": {
-	"webpack": "^4.41.5",
-	"webpack-cli": "^3.3.10"
   }
 }
