site: review and add gsTools.html page to give a try.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,18 +7,19 @@
 	  "DOM.Iterable"
 	],
 	"target": "es2017",
-	"module": "esnext",
-	"allowJs": false,
-	"sourceMap": true,
-	"forceConsistentCasingInFileNames": false,
-	"removeComments": true,
-	"newLine": "lf",
-	"alwaysStrict": true,
-	"noImplicitAny": true,
-	"noImplicitThis": true,
-	"jsx": "react",
-	"reactNamespace": "JSX"
-  },
+		"module": "esnext",
+		"allowJs": false,
+		"sourceMap": true,
+		"forceConsistentCasingInFileNames": false,
+		"removeComments": true,
+		"newLine": "lf",
+		"alwaysStrict": true,
+		"noImplicitAny": true,
+		"noImplicitThis": true,
+		"jsx": "react",
+		"reactNamespace": "JSX",
+		"allowSyntheticDefaultImports": true
+	},
   "include": [
 	"api/**/*.ts",
 	"test/**/*.ts",
