--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"devDependencies": {
 		"@types/jasmine": "3.3.13",
 		"@types/node": "12.6.6",
+		"@types/codemirror": "0.0.84",
 		"jasmine-core": "3.4.0",
 		"karma": "4.2.0",
 		"karma-chrome-launcher": "3.0.0",
