--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
 	"version": "0.0.1",
 	"private": true,
 	"devDependencies": {
-		"@types/jasmine": "3.3.13",
-		"@types/node": "12.6.6",
-		"@types/codemirror": "0.0.84",
-		"jasmine-core": "3.4.0",
-		"karma": "4.2.0",
-		"karma-chrome-launcher": "3.0.0",
-		"karma-firefox-launcher": "1.1.0",
-		"karma-jasmine": "2.0.1",
-		"karma-junit-reporter": "1.2.0",
-		"typescript": "3.7.2",
-		"glob": "7.1.6",
-		"terser": "4.6.2",
-		"fs-extra": "8.1.0",
-		"rollup": "1.29.0"
+		"@types/codemirror": "^5.60.2",
+		"@types/jasmine": "^3.8.2",
+		"@types/node": "^16.4.8",
+		"fs-extra": "^10.0.0",
+		"glob": "^7.1.7",
+		"jasmine-core": "^3.8.0",
+		"karma": "^6.3.4",
+		"karma-chrome-launcher": "^3.1.0",
+		"karma-firefox-launcher": "^2.1.1",
+		"karma-jasmine": "^4.0.1",
+		"karma-junit-reporter": "^2.0.1",
+		"rollup": "^2.55.1",
+		"terser": "^5.7.1",
+		"typescript": "^4.3.5"
 	},
 	"scripts": {
 		"runInstall": "npm install",
